examples/bad/06-03-functions-missing-return.dog
int fun() {
    if (true) {
        return 5;
    }

    // here return is missing,
    // true in the condition above 
    // can be anything
}